<resources>
	<string name="app_name">EduSphere</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="get_started_string">Get Started</string>
	<string name="edusphere_string">EduSphere</string>
	<string name="sign_in_to_continue_string">Sign in to continue</string>
	<string name="hi_student_string">Hi User</string>
	<string name="forgot_password__string">Forgot Password?</string>
	<string name="input_title_copy_string">Password</string>
	<string name="bhanublez_gmail_com_string">bhanublez@gmail.com</string>
	<string name="input_title_copy_2_string">Mobile Number/Email</string>
	<string name="sign_in_string">SIGN IN</string>
	<string name="time_string">9:41</string>
	<string name="filter_string">Assignment</string>
	<string name="surface_areas_and_volumes_string">Path Finding Algo</string>
	<string name="assign_date_string">Assign Date</string>
	<string name="last_submission_date_string">Last Submission Date</string>
	<string name="_10_nov_20_string">10 Nov 24</string>
	<string name="__10_dec_20_string">10 Dec 24</string>
	<string name="mathematics_string">DSA</string>
	<string name="EduSphere">EduSphere\n</string>
	<string name="structure_of_atoms_string">Turing Machine</string>
	<string name="assign_date_3_string">Assign Date</string>
	<string name="last_submission_date_3_string">Exam Date</string>
	<string name="last_submission_date_3_ek1_string">Exam Time</string>
	<string name="__10_oct_20_string">10 Oct 24</string>
	<string name="__10_oct_20_ek1_string">01:30</string>
	<string name="__30_oct_20_string">30 Oct 24</string>
	<string name="science_string">PR</string>
	<string name="rectangle_ek3">rectangle_ek3</string>
	<string name="rectangle_ek4">rectangle_ek4</string>
	<string name="subject_bg">subject_bg</string>
	<string name="paul_jameson_work_co_string">Dr Abjaka Lubey</string>
	<string name="paul_jameson_work_co_ek1_string">Tim Dabu</string>
	<string name="input_title_copy_ek1_string">Toc</string>
	<string name="paul_jameson_work_co_ek2_string">Ravi Taja</string>
	<string name="input_title_copy_ek2_string">Kuch Tpoh</string>
	<string name="paul_jameson_work_co_ek3_string">Long Son</string>
	<string name="input_title_copy_ek3_string">Alien</string>
	<string name="sleepover_night_string">Stupd Project</string>
	<string name="__06_jan_21_09_00_am_string">06 Jan 24, 09:00 AM</string>
	<string name="a_sleepover_is_a_great_treat_for_kids__many_schools_use_such_an_event_as_the_culminating_activity_of_the_school_year___string">Making stupid Project with group</string>
	<string name="last_submission_date_3_ek2_string">Duration</string>
	<string name="enter_phone_number_string">Enter phone number</string>
	<string name="enter_gender_string">Enter Gender</string>
	<string name="enter_name_string">Enter name</string>
	<string name="enter_d_o_b_string">Enter D.O.B</string>
	<string name="qualification_string">Qualification</string>
	<string name="time_table_2_string">Add Teacher</string>
	<string name="personal_detail_string">Personal Detail</string>
	<string name="computer_science_string">OOPS</string>
	<string name="__08_15am___9_00am_string">08:15am - 9:00am</string>
	<string name="cherise_james_string">Lazy Donkey</string>
	<string name="period_1_string">Period 1</string>
	<string name="tue____________wed_string">TUE            WED            THU            FRI           SAT</string>
	<string name="___mon_string">  MON</string>


	<string name="done_2_string">DONE</string>
	<string name="class_xi_b_roll_no__04_string">0187CS211049</string>
	<string name="akshay_syal_string">Bhanu Pratap Singh</string>
	<string name="send_string">LogOut</string>
	<string name="text_string">1234567891098</string>
	<string name="label_string">Adhar No</string>
	<string name="text_2_string">2021-25</string>
	<string name="label_2_string">Academic Year</string>
	<string name="text_3_string">4297191</string>
	<string name="label_3_string">Student ID</string>
	<string name="text_4_string">A</string>
	<string name="label_4_string">Section Name</string>
	<string name="text_5_string">UG</string>
	<string name="label_5_string">Degree</string>
	<string name="text_6_string">24 May 1900</string>
	<string name="label_6_string">Date of Birth</string>
	<string name="text_8_string">XYz zyz</string>
	<string name="label_8_string">Father Name</string>
	<string name="text_9_string">XYz zyz</string>
	<string name="label_9_string">Mother Name</string>
	<string name="text_10_string">Male</string>
	<string name="label_10_string">Gender</string>
	<string name="text_10_ek1_string">O+</string>
	<string name="label_10_ek1_string">Blood Group</string>
	<string name="text_10_ek2_string">Hindu</string>
	<string name="label_10_ek2_string">Religion</string>
	<string name="text_10_ek3_string">Open</string>
	<string name="label_10_ek3_string">Category</string>
	<string name="contact_detail_string">Contact Detail</string>
	<string name="subjects_string">Subjects</string>
	<string name="teachers_string">Teachers List</string>
	<string name="logout_2_string">Logout</string>
	<string name="exam_string">Exam</string>
	<string name="assignment_2_string">Assignment</string>
	<string name="change_password_2_string">Change Password</string>
	<string name="blue_1_ek1">blue_1_ek1</string>
	<string name="blue_b_1">blue_b_1</string>
	<string name="result_2_string">Record</string>
	<string name="feedback_string">Feedback</string>
	<string name="collogeholiday_string">Holidays</string>
	<string name="events_2_string">Events</string>
	<string name="leave_application_2_string">Announcement</string>


	<string name="class_xi_b_roll_no__04_ek1_string">BHANU PRATAP SINGH</string>
	<string name="hi_akshay_string">Good Morning</string>
	<string name="__2020_2021_string">2021-2025</string>

	<string-array name="feedback_types">
		<item>General Feedback</item>
		<item>Feature Request</item>
		<item>Bug Report</item>
		<item>Other</item>
	</string-array>

	<string-array name="semester_array">
		<item>Semester 1</item>
		<item>Semester 2</item>
		<item>Semester 3</item>
		<item>Semester 4</item>
		<item>Semester 5</item>
		<item>Semester 6</item>
		<item>Semester 7</item>
		<item>Semester 8</item>
	</string-array>

	<string-array name="department_array">
		<item>Computer Science</item>
		<item>Electrical Engineering</item>
		<item>Mechanical Engineering</item>
		<item>Civil Engineering</item>
	</string-array>

	<string-array name="branches_array">
		<item>Computer Science</item>
		<item>Electrical</item>
		<item>Civil</item>
		<item>Mechanical</item>
	</string-array>


	<!--section_array_cs-->

	<string-array name="section_array_cs">
		<item>CS_1</item>
		<item>CS_2</item>
		<item>CS_3</item>
	</string-array>

	<!--section_array_it-->

	<string-array name="section_array_it">
		<item>IT_1</item>
		<item>IT_2</item>
		<item>IT_3</item>
	</string-array>

	<!--section_array_ec-->

	<string-array name="section_array_ec">
		<item>EC_1</item>
		<item>EC_2</item>
		<item>EC_3</item>
	</string-array>

	<!--section_array_ee-->

	<string-array name="section_array_ee">
		<item>EE_1</item>
		<item>EE_2</item>
		<item>EE_3</item>
	</string-array>

	<!--section_array_me-->

	<string-array name="section_array_me">
		<item>ME_1</item>
		<item>ME_2</item>
		<item>ME_3</item>
	</string-array>

	<!--section_array_ce-->

	<string-array name="section_array_ce">
		<item>CE_1</item>
		<item>CE_2</item>
		<item>CE_3</item>
	</string-array>

	<!--Degree Array-->
	<string-array name="degree_array">
		<item>UG</item>
		<item>PG</item>
	</string-array>

	<!--Religion Array-->
	<string-array name="religion_array">
		<item>Hindu</item>
		<item>Muslim</item>
		<item>Sikh</item>
		<item>Christian</item>
		<item>Jain</item>
		<item>Buddhist</item>
		<item>Others</item>
	</string-array>

	<!--Category Array-->
	<string-array name="category_array">
		<item>Open</item>
		<item>SC</item>
		<item>ST</item>
		<item>OBC</item>
		<item>Others</item>
	</string-array>

	<!--Blood Group Array-->
	<string-array name="blood_group_array">
		<item>A+</item>
		<item>A-</item>
		<item>B+</item>
		<item>B-</item>
		<item>AB+</item>
		<item>AB-</item>
		<item>O+</item>
		<item>O-</item>
	</string-array>

	<!--Medium Array-->
	<string-array name="medium_array">
		<item>English</item>
		<item>Hindi</item>
		<item>Others</item>
	</string-array>

	<!--Gender Array-->
	<string-array name="gender_array">
		<item>Male</item>
		<item>Female</item>
		<item>other</item>
	</string-array>








</resources>