<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/blue_b_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/blue_b_1"
        android:scaleType="fitXY"
        android:src="@drawable/blue_b_1_ek1"
        tools:layout_editor_absoluteY="37dp" />

    <RelativeLayout
        android:id="@+id/heading_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_b_1"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/_bg__heading_content_ek1"
            android:layout_width="189dp"
            android:layout_height="77dp"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="-222dp"
            android:background="@drawable/_bg__heading_content_ek1_shape" />

        <TextView
            android:id="@+id/sign_in_to_continue"
            android:layout_width="206dp"
            android:layout_height="31dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="52dp"
            android:alpha="0.61"
            android:text="@string/sign_in_to_continue_string"
            android:textColor="@color/_bg___02_login_ek2_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hi_student"
            android:layout_width="143.4dp"
            android:layout_height="58.4dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/hi_student_string"
            android:textColor="@color/_bg___02_login_ek2_color"
            android:textSize="34sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="582dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/curve_bg_ek1"
        app:layout_constraintBottom_toBottomOf="@+id/blue_b_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="55dp">


            <RelativeLayout
                android:id="@+id/mobile_number_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp">

                <EditText
                    android:id="@+id/user_idor_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_title_copy_2"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:hint="Enter User ID"
                    android:textColor="@color/oval_color"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/input_title_copy_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:text="User Id"
                    android:textColor="@color/input_title_copy_color"
                    android:textSize="24sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pass_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_number_email"
                android:layout_alignStart="@+id/mobile_number_email"
                android:layout_alignEnd="@+id/mobile_number_email"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:hint="Enter Pssword"
                    android:inputType="textPassword"
                    android:textColor="@color/oval_color"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:text="Password"
                    android:textColor="@color/input_title_copy_color"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tt"
                android:layout_width="326dp"
                android:layout_height="46dp"
                android:layout_below="@id/pass_field"
                android:layout_alignStart="@+id/pass_field"
                android:layout_alignEnd="@+id/pass_field"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp">


                <ImageView
                    android:id="@+id/sgn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="bg"
                    android:src="@drawable/bg" />

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:text="@string/sign_in_string"
                    android:textAlignment="center"
                    android:textColor="@color/_bg___02_login_ek2_color"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/forgot_password_"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_below="@id/tt"
                android:layout_marginLeft="226dp"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password__string"
                android:textColor="@color/forgot_password__color"
                android:textSize="16sp" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>